# seal-device

./: CMakeLists.txt  README.md  device.h  startup_samd21.c  startup_samd51.c  startup_saml21.c  system_device.c  system_device.h
cmsis_core_m/: CMakeLists.txt
device/samd51a/: samd51j19a.h
device/saml21b/: saml21g18b.h
toolchain/: asf-flags-debug.txt  asf-flags-release.txt  cortex-m0plus.cmake  cortex-m4f.cmake
toolchain/common/: arm-none-eabi.cmake
